# ScODA

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  benchmark_LAST_TINY.bash  data.json  plot.py  pyproject.toml  run_llnl.bash
THETA/data/: python_class.bash
benchmark_datasets/: README.md  create_LAST_TINY.bash  create_THETA_TINY.bash
data_gen/: create_pydantic_basemodel_from_csv.bash  generate_influx_data.py  generate_pressure_data.py  set_couchdb_config.py
docker/: couchdb.docker-compose.yml  db2.docker-compose.yml  db2.env_list  docker-compose.yml  influxdb.docker-compose.yml  mariadb.docker-compose.yml  mongo.docker-compose.yml  mysql.docker-compose.yml  postgresql.docker-compose.yml  victoriametrics.docker-compose.yml
scoda/: __init__.py  app.py  benchmarks.py  cli.py  main.py  utils.py
scoda/_old/: db2_test.py  mysql_test.py  postgres_test.py
scoda/api/: benchmark.py  benchmarks.py  data.py  dataset.py  db.py  utils.py
scoda/api/db/: __init__.py  implementations.py  llnl_last.py
scoda/api/db/relational/: __init__.py  implementations.py
scoda/benchmarks/: __init__.py  aggregation.py  egress.py  ingress.py
scoda/benchmarks/db/relational/: __init__.py
scoda/datasets/: __init__.py  generic.py  last.py  theta.py  wrappers.py
scoda/datasets/anl_theta/: dataset.py  model.py
scoda/datasets/llnl_last/: __init__.py  dataset.py  model.py
scoda/db/: __init__.py  benchmark.py  generic.py  implementations.py  results.py
scoda/db/_old/: __init__.py  results.py
scoda/db/_old/document/: last.py
scoda/db/_old/relational/: __init__.py  engines.py
scoda/db/_old/time_series/: last.py
scoda/db/document/: __init__.py  generic.py  implementation.py  last.py
scoda/db/lakehouse/: __init__.py  generic.py  implementation.py
scoda/db/relational/: __init__.py  generic.py  implementation.py  last.py
scoda/db/results/: __init__.py  implementation.py
scoda/db/time_series/: __init__.py  generic.py  implementation.py  last.py
scoda/visualizations/: plot.py
