[project]
name = "scoda"
version = "0.0.0"
description = "Hello World"
authors = [{ name = "Nicholas M. Synovic", email = "nicholas.synovic@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = ["Template"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: SQL",
]
dependencies = [
    "cryptography>=45.0.5",
    "ibm-db>=3.2.6",
    "ibm-db-sa>=0.4.2",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "progress>=1.6.1",
    "psycopg2-binary>=2.9.10",
    "pymysql>=1.1.1",
    "pyspark>=4.0.0,<5",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
]

[project.urls]
Homepage = "https://github.com/NicholasSynovic/template_python"
Repository = "https://github.com/NicholasSynovic/template_python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
scoda = "scoda.main:main"
